cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/second/second.cpp

#include "lib_header.h"

int main202433_Second() {
    return pGlobal202433->field2; 
}
